--- a/finalProject/untitled/src/main/webapp/CSS/index.css
+++ b/finalProject/untitled/src/main/webapp/CSS/index.css
@@ -18,8 +18,6 @@
     word-wrap:break-word;
 }
 
-
-
 #loginElements{
     align-items:center;
     display:flex;
@@ -51,6 +49,12 @@ input{
     color:white;
 }
 #registerButton:hover{
+    color:white;
+}
+#removeButton{
+    colot:black;
+}
+#removeButton:hover{
     color:white;
 }
 
