--- a/finalProject/untitled/src/main/webapp/CSS/homepage.css
+++ b/finalProject/untitled/src/main/webapp/CSS/homepage.css
@@ -73,6 +73,11 @@
     height:100%;
     transition: transform 0.3s ease-in-out;
 }
+#announcementDiv > div > a{
+    position:relative;
+    width:100%;
+    height:100%;
+}
 #announcementDiv > div > p{
     display:none;
     position: absolute;
