--- a/finalProject/untitled/src/main/webapp/CSS/announcement.css
+++ b/finalProject/untitled/src/main/webapp/CSS/announcement.css
@@ -1,112 +1,119 @@
-#entireDiv{
-    position:absolute;
-    width:100%;
-    height:100%;
-    display:flex;
+#entireDiv {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
     flex-direction: column;
-    left:0;
-    top:0;
+    left: 0;
+    top: 0;
 }
-#backgrVid{
+
+#backgrVid {
     position: fixed;
-    right:0;
-    bottom:0;
+    right: 0;
+    bottom: 0;
     min-width: 100%;
     min-height: 100%;
     z-index: -1;
 }
-#topDiv{
-    position : relative;
-    top : 0;
-    width: 100%;
-    height:10%;
-    left:0;
-    display:flex;
-    flex-direction: row;
-    background-color : black;
-}
-#bodyDiv{
-    position:relative;
-    height:90%;
-    width:100%;
-}
-#midDiv{
-    position:relative;
-    height:100%;
-    width:40%;
-    left:30%;
-    display:flex;
-    flex-direction: column;
-}
-#topMarginDiv{
-    position:relative;
-    top:0;
-    height:15%;
-    width:100%;
-}
-#midList{
-    position:relative;
-    width:100%;
-    height:10%;
-}
-#announcementDiv{
+
+#topDiv {
     position: relative;
-    width:100%;
-    height:75%;
-    display: flow;
-    flex-wrap: wrap;
-}
-#bottomDiv{
-    width:100%;
+    top: 0;
+    width: 100%;
     height: 10%;
+    left: 0;
+    display: flex;
+    flex-direction: row;
+    background-color: black;
 }
 
-#announcementDiv > img{
+#bodyDiv {
     position: relative;
-    width:100%;
+    height: 90%;
+    width: 100%;
+}
+
+#midDiv {
+    position: relative;
+    height: 100%;
+    width: 40%;
+    left: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#topMarginDiv {
+    position: relative;
+    top: 0;
+    height: 15%;
+    width: 100%;
+}
+
+#announcementDiv {
+    position: relative;
+    width: 100%;
+    height: 75%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; /* Center vertically */
+    text-align: center; /* Center align text horizontally */
+}
+
+#announcementDiv > img {
+    position: relative;
+    width: 100%;
     height: 70%;
 }
-#announcementDiv > h4{
-    positon: relative;
+
+#announcementDiv > h4 {
+    position: relative;
     color: azure;
     width: 100%;
-    height: 50%;
-    word-wrap: break-word;
+    text-align: center;
+    margin: 0; /* Reset margin to center text vertically */
 }
 
-h1{
+h1 {
     position: absolute;
     color: azure;
     left: 5%;
     font-family: "Comic Sans";
 }
-h2{
-    position:absolute;
+
+h2 {
+    position: absolute;
     color: azure;
     left: 40%;
     font-family: "Comic Sans";
-    font-size:xxx-large;
+    font-size: xxx-large;
 }
-h3{
-    font-style:italic;
-    position:absolute;
+
+h3 {
+    font-style: italic;
+    position: absolute;
     color: azure;
     font-family: "Academy Italic";
 }
-ul{
-    position:absolute;
-    right:5%;
-    top:10%;
+
+ul {
+    position: absolute;
+    right: 5%;
+    top: 10%;
     list-style-type: none;
 }
-a{
-    color:inherit;
+
+a {
+    color: inherit;
     text-decoration: none;
 }
-li{
+
+li {
     display: inline-block;
-    font-family:Verdana, sans-serif;
+    font-family: Verdana, sans-serif;
     color: azure;
-    font-size:x-large;
-    margin-right:20px;
+    font-size: x-large;
+    margin-right: 20px;
 }
