--- a/finalProject/untitled/src/main/webapp/CSS/homepage.css
+++ b/finalProject/untitled/src/main/webapp/CSS/homepage.css
@@ -25,19 +25,68 @@
     flex-direction: row;
     background-color : black;
 }
+
 #bodyDiv{
-    position:relative;
-    height:90%;
-    width:100%;
+    position: relative;
+    width: 100%;
+    height: 90%;
+    left: 0;
+    display: flex;
+    flex-direction: row;
+//background-color: white;
 }
-#midDiv{
+
+#leftDiv{
     position:relative;
-    height:100%;
-    width:40%;
-    left:30%;
-    display:flex;
+    height: 100%;
+    width: 30%;
+    left: 0;
+    display: flex;
     flex-direction: column;
 }
+
+#myQuizzesDiv{
+    position:relative;
+    height: 15%;
+    width: 50%;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    background-color: blue;
+    color: azure;
+}
+
+#quizTitlesDiv{
+    position:relative;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    background-color: orange;
+    color: azure;
+}
+
+#midDiv{
+    position: relative;
+    height: 100%;
+    width: 30%;
+    left: 5%;
+    display:flex;
+    flex-direction: column;
+    background-color: orange;
+}
+
+#rightDiv{
+    position: relative;
+    height: 100%;
+    width: 30%;
+    left: 10%;
+    display:flex;
+    flex-direction: column;
+    background-color: orange;
+}
+
 #topMarginDiv{
     position:relative;
     top:0;
