--- a/finalProject/untitled/src/main/webapp/CSS/homepage.css
+++ b/finalProject/untitled/src/main/webapp/CSS/homepage.css
@@ -1,3 +1,9 @@
+.hidden{
+    display:none !important;
+}
+body{
+    height:100vh;
+}
 #entireDiv{
     position:absolute;
     width:100%;
@@ -52,29 +58,29 @@
     left: 0;
     display: flex;
     flex-direction: column;
-    background-color: blue;
+    /*background-color: blue;*/
     color: azure;
 }
 
-#quizTitlesDiv{
+.quizTitlesDiv{
     position:relative;
     height: 100%;
     width: 100%;
     left: 0;
     display: flex;
     flex-direction: column;
-    background-color: orange;
+    /*background-color: orange;*/
     color: azure;
 }
 
 #midDiv{
     position: relative;
     height: 100%;
-    width: 30%;
-    left: 5%;
+    width: 50%;
+    left: 10%;
     display:flex;
     flex-direction: column;
-    background-color: orange;
+    /*background-color: orange;*/
 }
 
 #rightDiv{
@@ -84,7 +90,7 @@
     left: 10%;
     display:flex;
     flex-direction: column;
-    background-color: orange;
+    /*background-color: orange;*/
 }
 
 #topMarginDiv{
@@ -93,10 +99,12 @@
     height:15%;
     width:100%;
 }
+
 #midList{
     position:relative;
     width:100%;
     height:10%;
+    display:flex;
 }
 #announcementDiv{
     position: relative;
@@ -165,4 +173,26 @@ li{
     color: azure;
     font-size:x-large;
     margin-right:20px;
+}
+.label {
+    cursor: pointer;
+    margin-right:20px;
+    transition: color 0.5s;
+    color:#EFF6E0;
+    transition: transform 0.2s;
+}
+.label:hover {
+    color: #7289d9;
+    transform: scale(1.2);
+}
+.label::after {
+    content: "";
+    display: block;
+    height: 2px;
+    width: 0;
+    background-color: #EFF6E0;
+    transition: width 0.5s;
+}
+.label.active::after {
+    width: 100%;
 }
