--- a/finalProject/untitled/src/main/webapp/CSS/quizSummary.css
+++ b/finalProject/untitled/src/main/webapp/CSS/quizSummary.css
@@ -10,22 +10,22 @@
     display:flex;
     flex-direction: row;
     width:100%;
-    height:100%;
+    min-height:100%;
 }
 #leftDiv{
     width:30%;
-    height:100%;
+    min-height:100%;
     background-color: #598392;
 }
 #midDiv{
     width:40%;
-    height:100%;
+    min-height:100%;
     background-color: #EFF6E0;
     text-align:center;
 }
 #rightDiv{
     width:30%;
-    height:100%;
+    min-height:100%;
     background-color: #124559;
 
 }
@@ -59,7 +59,16 @@ input[type="text"]:hover {
 input:hover{
     transform: scale(1.1);
 }
-#leftDiv > div > p{
+#leftDiv > div > div > p{
+    color:#EFF6E0;
+}
+#leftDiv > div > div > a > p{
+    color:#EFF6E0;
+}
+#rightDiv > div > div > p{
+    color:#EFF6E0;
+}
+#rightDiv > div > div > a > p{
     color:#EFF6E0;
 }
 .buttonClass{
