--- a/finalProject/untitled/src/main/webapp/CSS/profile.css
+++ b/finalProject/untitled/src/main/webapp/CSS/profile.css
@@ -72,5 +72,22 @@ h1 {
      border-radius: 5px;
      cursor: pointer;
  }
-
+ ul {
+     position: absolute;
+     right: 5%;
+     list-style-type: none;
+     margin:0;
+ }
+ li{
+     display: inline-block;
+     font-family:Verdana, sans-serif;
+     color: azure;
+     font-size:x-large;
+     margin-right:20px;
+     margin-top:0px;
+ }
+ a{
+     text-decoration: none;
+     color:inherit;
+ }
 
